Fixed alignment issues

--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -312,6 +312,10 @@ main {
     .menu-group-name {
         font-size: 130%;
     }
+
+    .menu-h {
+        padding: 20px 45px 5px 45px;
+    }
     
     .menu-item {
         width: 100%;
